
More accurate LIBOR calendars (thanks to Daniele de Francesco.)
